# LearnModernCpp

./: .clang-format  README.md
00-bjarne_book/03-abstraction_mechanisms/29-matrix_design/: CMakeLists.txt  a  matrix.h  matrix_test.cpp
00-bjarne_book/04-the_standard_library/39-locales/: CMakeLists.txt  character_utilities.cpp  locale_examples.cpp  locale_facet_example.cpp  locale_handling.cpp
01-dev_and_debug/cmake_hello/: CLIs.md
01-dev_and_debug/shoot_game/: CMakeLists.txt  main.cpp
01-dev_and_debug/shoot_game/includes/: gun.h  solider.h
01-dev_and_debug/shoot_game/src/: CMakeLists.txt  gun.cpp
01-dev_and_debug/swap_demo/: CLIs.txt  dynamic_main
02 - Basic Facilities/07-ptr-arr-ref/: lvalue-ref.cpp
02 - Basic Facilities/09-statements/: a
02 - Basic Facilities/12-functions/: a
02 - Basic Facilities/13-exceptions/: enforcing_invariants.cpp  structed_binding.cpp
02 - Basic Facilities/15-source-files/: programs.cpp
02-basic_facilities/08-struct-union-enum/: class_enum.cpp
02-basic_facilities/11-operations/: cpy.cpp
02-basic_facilities/12-functions/: ptr2fn.cpp
02-basic_facilities/13-exceptions/: catch_exceptions.cpp  exp_guarantee.cpp  finally.cpp
02-basic_review/: CMakeLists.txt  arr_.cpp  hw01.cpp  hw02.cpp  hw03.cpp  hw04.cpp  hw05.cpp  hw06.cpp  hw07.cpp  hw08.cpp  hw09.cpp  hw10.cpp  hw11.cpp  hw12.cpp  hw13.cpp  hw14.cpp
03 - Abstraction Mechanisms/17-default-members/: a
03 - Abstraction Mechanisms/18-overloading/: example1.cpp  example2.cpp  type_conversion.cpp
03 - Abstraction Mechanisms/19-special-operators/: subscripting.cpp
03 - Abstraction Mechanisms/20-derived_classes/: explicit_control.cpp  type_field.cpp
04-the_standard_library/32-stl_algorithms/: CMakeLists.txt  min_max_algorithms.cpp
04-the_standard_library/38-io_streams/: CMakeLists.txt  io_operations_explanation.cpp  iostream_error_handling.cpp  overload_for_custom_class.cpp  stream_iterators_demo.cpp
04-the_standard_library/40-numerics/: CMakeLists.txt  random_numbers_example.cpp
04-the_standard_library/42-threads_and_tasks/: CMakeLists.txt  concurrency_concepts.cpp  see_threads.cpp
06-type, declaration/: auto.cpp
06-type-and-declaration/: a
06-type-declaration/: a  string_.cpp  vector_.cpp
06-types-and-declarations/: auto.cpp  character.cpp
07-pointer-array-reference/: a  rval-ref.cpp
07-pointers-arrays-references/: a  array-pass.cpp  notes.md  ptr2arr.c  rval-ref.cpp  string_literal.cpp
08-struct, union, enum/: bit-field.cpp
08-struct-union-enum/: a  class_enum  class_enum.cpp  struct-names.cpp
10-Expressions/: a
10-expressions/: a.s  constexpr.cpp  literal_type.cpp
11-Operations/: a  nothrow.cpp  overloading_new.cpp
12-functions/: a  arr_pass.cpp  ptr2fn.cpp  variadic_temp.cpp
13-exceptions/: a  exceptions_in_threads.cpp  exp_handle.cpp  finally.cpp  intro.cpp  resrc_manag.cpp  structed_binding.cpp  throw_exceptions.cpp
14-namespaces/: a  c_header.cpp  composition.cpp  modular.cpp  namespace_open.cpp  real_usage.cpp
17-construct-destruct-copy-move/: a  copy_.cpp  cpy_move.cpp  default_.cpp  default_con_de_structor.cpp  delegate_constructor.cpp  move_.cpp  perf_test.cpp
17-default-members/: class_obj_init.cpp  con_de_structor.cpp  inclass_init.cpp  static_init.cpp
18-overloading/: intro.cpp
19-special-operators/: a  alloc_dealloc.cpp  base3_num.cpp  deref.cpp  function_call.cpp  inc_dec.cpp  intro.cpp
20-derived_classes/: a  access_control.cpp  example.cpp  intro.cpp  ptr2members.cpp
21-class-hierarchy/: a  virtual_inheritance.cpp
22-runtime-type/: a  multiple_inheritance.cpp
23-templates/: a  cpu_reduce.cpp  string_template.cpp  template_aliases.cpp  template_class_members.cpp  template_overloading.cpp  templates.cpp  templates_typecheck.cpp
27-templates_and_hierarchies/: a
(+228 files in other folders)
