cmake_minimum_required(VERSION 3.10)

project(io_streams)

set(CMAKE_CXX_STANDARD 20)

add_executable(01 io_streams_demo.cpp)
add_executable(02 iostream_error_handling.cpp)
add_executable(03 io_operations_explanation.cpp)
add_executable(04 stream_iterators_demo.cpp)
add_executable(05 io_buffering_examples.cpp)
