cmake_minimum_required(VERSION 3.10)

project(numerics)

set(CMAKE_CXX_STANDARD 20)

add_executable(01 numeric_limits_demo.cpp)
add_executable(02 math_functions_demo.cpp)
add_executable(03 numerical_programming.cpp)
add_executable(04 generalized_numeric_algorithms.cpp)
add_executable(05 random_numbers_example.cpp)